pamc/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_case_params/expected_0_actually_1.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = match Nat.O {
    .O(n) => n,
    .S(n) => n,
};
